Finished Imbalanced tuning

--- a/_2. Modeling/1. Baselines.ipynb
+++ b/_2. Modeling/1. Baselines.ipynb
@@ -18,8 +18,8 @@
     "\n",
     "random_state = 101\n",
     "\n",
-    "path_csv = \"../../../../Thesis_data/processed_data/\"\n",
-    "path_model = \"../../../../Thesis_data/Models/\""
+    "path_csv = \"../../../Thesis_data/processed_data/\"\n",
+    "path_model = \"../../../Thesis_data/Models/\""
    ]
   },
   {
