--- a/_2. Modeling/tuned_imbalanced_models.ipynb
+++ b/_2. Modeling/tuned_imbalanced_models.ipynb
@@ -20,10 +20,13 @@
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "import xgboost as xgb\n",
+    "from pytorch_tabnet.tab_model import TabNetClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import joblib\n",
     "import optuna\n",
+    "import torch\n",
     "from optuna import Trial, visualization\n",
     "from optuna.samplers import TPESampler\n",
     "\n",
@@ -134,13 +137,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'C': 0.012341115473953784, 'solver': 'saga', 'penalty': None}\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_params = study.best_params #{'C': 0.012341115473953784, 'solver': 'saga', 'penalty': None}\n",
+    "print(best_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_params = study.best_params\n",
-    "#{'C': 0.012341115473953784, 'solver': 'saga', 'penalty': None}\n",
-    "print(best_params)"
+    "visualization.matplotlib.plot_optimization_history(study) #Optuna trial optimaization history.png\n",
+    "visualization.matplotlib.plot_param_importances(study) #Optuna hyperparameter importance.png\n",
+    "visualization.plot_slice(study) #Optuna hyperparameter slice plot.png\n",
+    "visualization.matplotlib.plot_timeline(study) #Optuna trial timeline.png"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./Images/Tuned models on imbalanced data/Logistic Regression/Optuna trial optimization history.png\">"
    ]
   },
   {
@@ -218,7 +247,7 @@
     }
    ],
    "source": [
-    "xgboost_best_params = study.best_params\n",
+    "xgboost_best_params = study.best_params #{'n_estimators': 350, 'learning_rate': 0.05, 'max_depth': 16, 'subsample': 0.9951754722614875, 'colsample_bytree': 0.8668977611468552, 'min_child_weight': 8}\n",
     "print(xgboost_best_params)"
    ]
   },
@@ -272,7 +301,207 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def objective_rf(trial):\n",
+    "    params = {\n",
+    "        \"max_depth\": trial.suggest_int(\"max_depth\", 5, 20),\n",
+    "        \"min_samples_leaf\": trial.suggest_int(\"min_samples_leaf\", 5, 9),\n",
+    "        \"min_samples_split\": trial.suggest_int(\"min_samples_split\", 2, 10),\n",
+    "        \"n_estimators\": trial.suggest_int(\"n_estimators\", 150, 350, step=50)\n",
+    "    }\n",
+    "\n",
+    "    model_rfClass = RandomForestClassifier(**params, random_state=random_state, verbose=1, n_jobs=-1)\n",
+    "        \n",
+    "    skfold = StratifiedKFold(n_splits=3, random_state=random_state, shuffle=True)\n",
+    "    \n",
+    "    scores = cross_val_score(model_rfClass, X_train, y_train, cv=skfold, scoring=\"roc_auc\")  \n",
+    "\n",
+    "    return np.mean(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "study = optuna.create_study(direction='maximize', study_name='Random Forests Tuned Imbalanced', sampler=TPESampler(seed=random_state))\n",
+    "study.optimize(objective_xgboost, n_trials=20, show_progress_bar=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'max_depth': 20, 'min_samples_leaf': 5, 'min_samples_split': 6, 'n_estimators': 250}\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf_best_params = study.best_params #{'max_depth': 20, 'min_samples_leaf': 5, 'min_samples_split': 6, 'n_estimators': 250}\n",
+    "print(rf_best_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visualization.matplotlib.plot_optimization_history(study) #Optuna trial optimaization history.png\n",
+    "visualization.matplotlib.plot_param_importances(study) #Optuna hyperparameter importance.png\n",
+    "visualization.plot_slice(study) #Optuna hyperparameter slice plot.png\n",
+    "visualization.matplotlib.plot_timeline(study) #Optuna trial timeline.png"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./Images/Tuned models on imbalanced data/Random Forests/Optuna trial optimization history.png\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tuned_rf_imbalanced = RandomForestClassifier(**rf_best_params, random_state=random_state, verbose=1, n_jobs=-1)\n",
+    "tuned_rf_imbalanced.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joblib.dump(tuned_rf_imbalanced, 'rf_tuned_imbalance.joblib')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tuned TabNet model on imbalanced data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def objective_tabnet(trial):\n",
+    "\n",
+    "    params = {\n",
+    "        \"n_d\": trial.suggest_int(\"n_d\", 8,  32, step=4),\n",
+    "        \"n_steps\": trial.suggest_int(\"n_steps\", 2, 10),\n",
+    "        \"gamma\": trial.suggest_float(\"gamma\", 1.0, 2.0, step=0.01),\n",
+    "        \"n_shared\": trial.suggest_int(\"n_shared\", 1, 5),\n",
+    "        \"lambda_sparse\": trial.suggest_categorical(\"lambda_sparse\", [1e-6, 1e-5, 1e-4, 1e-3, 1e-2, 1e-1]),\n",
+    "    }\n",
+    "\n",
+    "    model_tabnetClass = TabNetClassifier(**params, seed=random_state, verbose=2, optimizer_params=dict(lr=2e-2, weight_decay=1e-5), n_a=params[\"n_d\"], device_name=\"cuda\")\n",
+    "\n",
+    "    skfold = StratifiedKFold(n_splits=3, random_state=random_state, shuffle=True)\n",
+    "\n",
+    "    auc_scores = []\n",
+    "\n",
+    "    for train_index, val_index in skfold.split(X_train, y_train):\n",
+    "        X_train_fold, X_val_fold = X_train.iloc[train_index], X_train.iloc[val_index]\n",
+    "        y_train_fold, y_val_fold = y_train[train_index], y_train[val_index]\n",
+    "\n",
+    "\n",
+    "\n",
+    "        model_tabnetClass.fit(X_train = X_train_fold.values,\n",
+    "                              y_train = y_train_fold,\n",
+    "                              eval_set = [(X_val_fold.values, y_val_fold)],\n",
+    "                              patience=2,\n",
+    "                              max_epochs=4,\n",
+    "                              batch_size=14000,\n",
+    "                              virtual_batch_size=14000,\n",
+    "                              eval_metric=[\"auc\"]\n",
+    "                              )\n",
+    "\n",
+    "        y_pred = model_tabnetClass.predict(X_val_fold.values)\n",
+    "\n",
+    "        auc_scores.append(roc_auc_score(y_val_fold, y_pred))\n",
+    "\n",
+    "    return np.mean(auc_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "study = optuna.create_study(direction=\"maximize\", study_name='TabNet Tuned Imbalanced', sampler=TPESampler(seed=random_state))\n",
+    "study.optimize(objective_tabnet, n_trials=20, show_progress_bar=True, gc_after_trial=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'n_d': 64, 'n_steps': 4, 'gamma': 1.78, 'n_shared': 1, 'lambda_sparse': 0.001}\n"
+     ]
+    }
+   ],
+   "source": [
+    "tabnet_best_params = study.best_params #{'n_d': 64, 'n_steps': 4, 'gamma': 1.78, 'n_shared': 1, 'lambda_sparse': 0.001}\n",
+    "print(tabnet_best_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visualization.matplotlib.plot_optimization_history(study) #Optuna trial optimaization history.png\n",
+    "visualization.matplotlib.plot_param_importances(study) #Optuna hyperparameter importance.png\n",
+    "visualization.plot_slice(study) #Optuna hyperparameter slice plot.png\n",
+    "visualization.matplotlib.plot_timeline(study) #Optuna trial timeline.png"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./Images/Tuned models on imbalanced data/TabNet/Optuna trial optimization history.png\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tabnet_tuned_imbalance = TabNetClassifier(**tabnet_best_params, seed=random_state, verbose=2, optimizer_params=dict(lr=2e-2, weight_decay=1e-5), n_a=tabnet_best_params[\"n_d\"], device_name=\"cuda\")\n",
+    "tabnet_tuned_imbalance.fit(X_train.values, y_train, max_epochs=4, batch_size=14000, virtual_batch_size=14000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(tabnet_tuned_imbalance, 'TabNet_tuned_imbalance.pt')"
+   ]
   }
  ],
  "metadata": {
