--- a/_3. Evaluation/1. Baseline_eval.ipynb
+++ b/_3. Evaluation/1. Baseline_eval.ipynb
@@ -14,8 +14,8 @@
     "import torch\n",
     "import joblib\n",
     "\n",
-    "path_csv = \"../../../../Thesis_data/processed_data/\"\n",
-    "path_model = \"../../../../Thesis_data/Models/\""
+    "path_csv = \"../../../Thesis_data/processed_data/\"\n",
+    "path_model = \"../../../Thesis_data/Models/\""
    ]
   },
   {
@@ -186,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xgb_class_baseline = pickle.load(open(path_model + \"XGBoost_baseline.pkl\", \"rb\"))\n",
+    "xgb_class_baseline = pickle.load(open(path_model + \"XGBoost_baseline.pkl\", \"rb\")) #xgb version 1.7.5\n",
     "y_pred_xgb_baseline = xgb_class_baseline.predict(X_test)"
    ]
   },
