Cleaned up folders

--- a/_2. Modeling/2. tuned_imbalanced_models.ipynb
+++ b/_2. Modeling/2. tuned_imbalanced_models.ipynb
@@ -188,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(tuned_lr_model, 'lr_tuned_imbalance.joblib')"
+    "joblib.dump(tuned_lr_model, 'logreg_tuned_imbalance.joblib')"
    ]
   },
   {
@@ -286,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(tuned_xgb_imbalanced, '/content/drive/MyDrive/Thesis data/xgb_tuned_imbalance.joblib')"
+    "joblib.dump(tuned_xgb_imbalanced, 'XGBoost_tuned_imbalance.joblib')"
    ]
   },
   {
