--- a/_2. Modeling/3. tuned_ROS_models.ipynb
+++ b/_2. Modeling/3. tuned_ROS_models.ipynb
@@ -17,8 +17,11 @@
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "import xgboost as xgb\n",
+    "from pytorch_tabnet.tab_model import TabNetClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import torch\n",
     "import joblib\n",
     "import optuna\n",
     "from optuna import Trial, visualization\n",
@@ -138,8 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logreg_best_params = study.best_params\n",
-    "#{'C': 0.012341115473953784, 'solver': 'saga', 'penalty': None}\n",
+    "logreg_best_params = study.best_params #{'C': 0.012341115473953784, 'solver': 'saga', 'penalty': None}\n",
     "print(logreg_best_params)"
    ]
   },
@@ -161,8 +163,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tuned_lr_model = LogisticRegression(**logreg_best_params, random_state=random_state, n_jobs=-1, verbose=2)\n",
-    "tuned_lr_model.fit(X_train, y_train)"
+    "ros = RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)\n",
+    "X_ros, y_ros = ros.fit_resample(X_train, y_train)\n",
+    "\n",
+    "tuned_lr_ros = LogisticRegression(**logreg_best_params, random_state=random_state, n_jobs=-1, verbose=2)\n",
+    "tuned_lr_ros.fit(X_ros, y_ros)"
    ]
   },
   {
@@ -171,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(tuned_lr_model, 'lr_tuned_ROS.joblib')"
+    "joblib.dump(tuned_lr_ros, 'logreg_tuned_ROS.joblib')"
    ]
   },
   {
@@ -229,8 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xgboost_best_params = study.best_params\n",
-    "#{'n_estimators': 200, 'learning_rate': 0.05, 'max_depth': 16, 'subsample': 0.8180174838276538, 'colsample_bytree': 0.8949014373055646, 'min_child_weight': 17}\n",
+    "xgboost_best_params = study.best_params #{'n_estimators': 200, 'learning_rate': 0.05, 'max_depth': 16, 'subsample': 0.8180174838276538, 'colsample_bytree': 0.8949014373055646, 'min_child_weight': 17}\n",
     "print(xgboost_best_params)"
    ]
   },
@@ -252,8 +256,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tuned_xgb_imbalanced = xgb.XGBClassifier(**xgboost_best_params, random_state=random_state, n_jobs=-1, verbosity=2, device=\"cuda\")\n",
-    "tuned_xgb_imbalanced.fit(X_train, y_train)"
+    "ros = RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)\n",
+    "X_ros, y_ros = ros.fit_resample(X_train, y_train)\n",
+    "\n",
+    "tuned_xgb_ros = xgb.XGBClassifier(**xgboost_best_params, random_state=random_state, n_jobs=-1, verbosity=2, device=\"cuda\")\n",
+    "tuned_xgb_ros.fit(X_ros, y_ros)"
    ]
   },
   {
@@ -262,7 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(tuned_xgb_imbalanced, 'xgb_tuned_ROS.joblib')"
+    "joblib.dump(tuned_xgb_ros, 'XGBoost_tuned_ROS.joblib')"
    ]
   },
   {
@@ -277,7 +284,82 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def objective_rf(trial):\n",
+    "    params = {\n",
+    "        \"max_depth\": trial.suggest_int(\"max_depth\", 5, 20),\n",
+    "        \"min_samples_leaf\": trial.suggest_int(\"min_samples_leaf\", 5, 9),\n",
+    "        \"min_samples_split\": trial.suggest_int(\"min_samples_split\", 2, 10),\n",
+    "        \"n_estimators\": trial.suggest_int(\"n_estimators\", 150, 350, step=50)\n",
+    "    }\n",
+    "\n",
+    "    steps = [\n",
+    "        (\"ros\", RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)),\n",
+    "        (\"rf\", RandomForestClassifier(**params, random_state=random_state, verbose=1, n_jobs=-1))\n",
+    "    ]\n",
+    "\n",
+    "    rf_pipeline = Pipeline(steps=steps)\n",
+    "        \n",
+    "    skfold = StratifiedKFold(n_splits=3, random_state=random_state, shuffle=True)\n",
+    "    \n",
+    "    scores = cross_val_score(rf_pipeline, X_train, y_train, cv=skfold, scoring=\"roc_auc\")  \n",
+    "\n",
+    "    return np.mean(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "study = optuna.create_study(direction='maximize', study_name='Random Forests Tuned ROS', sampler=TPESampler(seed=random_state))\n",
+    "study.optimize(objective_lr, n_trials=20, show_progress_bar=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_best_params = study.best_params \n",
+    "print(rf_best_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visualization.matplotlib.plot_optimization_history(study) #Optuna trial optimaization history.png\n",
+    "visualization.matplotlib.plot_param_importances(study) #Optuna hyperparameter importance.png\n",
+    "visualization.plot_slice(study) #Optuna hyperparameter slice plot.png\n",
+    "visualization.matplotlib.plot_timeline(study) #Optuna trial timeline.png"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ros = RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)\n",
+    "X_ros, y_ros = ros.fit_resample(X_train, y_train)\n",
+    "\n",
+    "tuned_rf_ros = RandomForestClassifier(**rf_best_params, random_state=random_state, verbose=1, n_jobs=-1)\n",
+    "tuned_rf_ros.fit(X_ros, y_ros)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joblib.dump(tuned_xgb_ros, 'rf_tuned_ROS.joblib')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -291,7 +373,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def objective_tabnet(trial):\n",
+    "\n",
+    "    params = {\n",
+    "        \"n_d\": trial.suggest_int(\"n_d\", 8,  64, step=4), #limited ram usage\n",
+    "        \"n_steps\": trial.suggest_int(\"n_steps\", 2, 10), #limited ram usage\n",
+    "        \"gamma\": trial.suggest_float(\"gamma\", 1.0, 2.0, step=0.01),\n",
+    "        \"n_shared\": trial.suggest_int(\"n_shared\", 1, 5),\n",
+    "        \"lambda_sparse\": trial.suggest_categorical(\"lambda_sparse\", [1e-6, 1e-5, 1e-4, 1e-3, 1e-2, 1e-1]),\n",
+    "    }\n",
+    "\n",
+    "    model_tabnetClass = TabNetClassifier(**params, seed=random_state, verbose=2, optimizer_params=dict(lr=2e-2, weight_decay=1e-5), n_a=params[\"n_d\"], device_name=\"cuda\") #device_name=\"cuda\"\n",
+    "\n",
+    "    skfold = StratifiedKFold(n_splits=3, random_state=random_state, shuffle=True)\n",
+    "\n",
+    "    auc_scores = []\n",
+    "\n",
+    "    for train_index, val_index in skfold.split(X_train, y_train):\n",
+    "        X_train_fold, X_val_fold = X_train.iloc[train_index], X_train.iloc[val_index]\n",
+    "        y_train_fold, y_val_fold = y_train[train_index], y_train[val_index]\n",
+    "\n",
+    "        ros = RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)\n",
+    "        X_ros, y_ros = ros.fit_resample(X_train_fold, y_train_fold)\n",
+    "\n",
+    "        model_tabnetClass.fit(X_train = X_ros.values,\n",
+    "                              y_train = y_ros,\n",
+    "                              eval_set = [(X_val_fold.values, y_val_fold)],\n",
+    "                              patience=2,\n",
+    "                              max_epochs=4,\n",
+    "                              batch_size=14000,\n",
+    "                              virtual_batch_size=14000,\n",
+    "                              eval_metric=[\"auc\"]\n",
+    "                              )\n",
+    "\n",
+    "        y_pred = model_tabnetClass.predict(X_val_fold.values)\n",
+    "\n",
+    "        auc_scores.append(roc_auc_score(y_val_fold, y_pred))\n",
+    "\n",
+    "    return np.mean(auc_scores)"
+   ]
   }
  ],
  "metadata": {
