Finished ROS modeling

--- a/_1. Data Preprocessing/1. Data loading and merging.ipynb
+++ b/_1. Data Preprocessing/1. Data loading and merging.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "cols_airport_weather = [\"NAME\", #Location of weather reading\n",
     "                        \"DATE\", #Date in month/day/year format\n",
-    "                        \"PRCP\", #Preciptation that day in inches\n",
+    "                        \"PRCP\", #Precipitation that day in inches\n",
     "                        \"SNOW\", #Snowfall that day in inches\n",
     "                        \"SNWD\", #Depth of snow that day in inches\n",
     "                        \"TMAX\", #Maximum temperature that day in Fahrenheit\n",
