--- a/_2. Modeling/2. tuned_imbalanced_models.ipynb
+++ b/_2. Modeling/2. tuned_imbalanced_models.ipynb
@@ -430,9 +430,9 @@
     "                              eval_metric=[\"auc\"]\n",
     "                              )\n",
     "\n",
-    "        y_pred = model_tabnetClass.predict(X_val_fold.values)\n",
+    "        y_pred = model_tabnetClass.predict_proba(X_val_fold.values)\n",
     "\n",
-    "        auc_scores.append(roc_auc_score(y_val_fold, y_pred))\n",
+    "        auc_scores.append(roc_auc_score(y_val_fold, y_pred[:,1]))\n",
     "\n",
     "    return np.mean(auc_scores)"
    ]
