--- a/_1. Data Preprocessing/3. Splitting and encoding.ipynb
+++ b/_1. Data Preprocessing/3. Splitting and encoding.ipynb
@@ -431,7 +431,7 @@
     "X = ontime_reporting.loc[:, ontime_reporting.columns != \"DEP_DEL15\"]\n",
     "y = ontime_reporting[\"DEP_DEL15\"]\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=random_state)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=random_state, shuffle=True)\n",
     "\n",
     "print(X_train.shape)\n",
     "print(y_train.shape)\n",
