--- a/_2. Modeling/3. tuned_ROS_models.ipynb
+++ b/_2. Modeling/3. tuned_ROS_models.ipynb
@@ -137,9 +137,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'C': 0.012341115473953784, 'solver': 'saga', 'penalty': None}\n"
+     ]
+    }
+   ],
    "source": [
     "logreg_best_params = study.best_params #{'C': 0.012341115473953784, 'solver': 'saga', 'penalty': None}\n",
     "print(logreg_best_params)"
@@ -155,6 +163,13 @@
     "visualization.matplotlib.plot_param_importances(study) #Optuna hyperparameter importance.png\n",
     "visualization.plot_slice(study) #Optuna hyperparameter slice plot.png\n",
     "visualization.matplotlib.plot_timeline(study) #Optuna trial timeline.png"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./Images/Tuned models on ROS data/Logistic Regression/Optuna trial optimization history.png\">"
    ]
   },
   {
@@ -251,6 +266,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./Images/Tuned models on ROS data/XGBoost/Optuna trial optimization history.png\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -290,19 +312,19 @@
     "        \"max_depth\": trial.suggest_int(\"max_depth\", 5, 20),\n",
     "        \"min_samples_leaf\": trial.suggest_int(\"min_samples_leaf\", 5, 9),\n",
     "        \"min_samples_split\": trial.suggest_int(\"min_samples_split\", 2, 10),\n",
-    "        \"n_estimators\": trial.suggest_int(\"n_estimators\", 150, 350, step=50)\n",
+    "        \"n_estimators\": trial.suggest_int(\"n_estimators\", 150, 350, step=50),\n",
     "    }\n",
     "\n",
     "    steps = [\n",
-    "        (\"ros\", RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)),\n",
-    "        (\"rf\", RandomForestClassifier(**params, random_state=random_state, verbose=1, n_jobs=-1))\n",
+    "        (\"ros\", RandomOverSampler(sampling_strategy='minority', random_state=random_state)),\n",
+    "        (\"rf\", RandomForestClassifier(**params, random_state=random_state, verbose=1, n_jobs=7))\n",
     "    ]\n",
     "\n",
     "    rf_pipeline = Pipeline(steps=steps)\n",
-    "        \n",
+    "\n",
     "    skfold = StratifiedKFold(n_splits=3, random_state=random_state, shuffle=True)\n",
-    "    \n",
-    "    scores = cross_val_score(rf_pipeline, X_train, y_train, cv=skfold, scoring=\"roc_auc\")  \n",
+    "\n",
+    "    scores = cross_val_score(rf_pipeline, X_train, y_train, scoring=\"roc_auc\", cv=skfold)\n",
     "\n",
     "    return np.mean(scores)"
    ]
@@ -340,6 +362,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./Images/Tuned models on ROS data/Random Forests/Optuna trial optimization history.png\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -358,6 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "joblib.dump(study, 'study_rf_tuned_ros.pkl')\n",
     "joblib.dump(tuned_xgb_ros, 'rf_tuned_ROS.joblib')"
    ]
   },
@@ -407,17 +437,86 @@
     "                              eval_metric=[\"auc\"]\n",
     "                              )\n",
     "\n",
-    "        y_pred = model_tabnetClass.predict(X_val_fold.values)\n",
+    "        y_pred = model_tabnetClass.predict_proba(X_val_fold.values)\n",
     "\n",
-    "        auc_scores.append(roc_auc_score(y_val_fold, y_pred))\n",
+    "        auc_scores.append(roc_auc_score(y_val_fold, y_pred[:,1]))\n",
     "\n",
     "    return np.mean(auc_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "study = optuna.create_study(direction=\"maximize\", study_name='TabNet Tuned ROS', sampler=TPESampler(seed=random_state))\n",
+    "study.optimize(objective_tabnet, n_trials=20, show_progress_bar=True, gc_after_trial=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tabnet_best_params = study.best_params\n",
+    "print(tabnet_best_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visualization.matplotlib.plot_optimization_history(study) #Optuna trial optimaization history.png\n",
+    "visualization.matplotlib.plot_param_importances(study) #Optuna hyperparameter importance.png\n",
+    "visualization.plot_slice(study) #Optuna hyperparameter slice plot.png\n",
+    "visualization.matplotlib.plot_timeline(study) #Optuna trial timeline.png"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ros = RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)\n",
+    "X_ros, y_ros = ros.fit_resample(X_train, y_train)\n",
+    "\n",
+    "tabnet_tuned_ros = TabNetClassifier(**tabnet_best_params, seed=random_state, verbose=2, optimizer_params=dict(lr=2e-2, weight_decay=1e-5), n_a=tabnet_best_params[\"n_d\"], device_name=\"cuda\")\n",
+    "tabnet_tuned_ros.fit(X_ros.values, y_ros, max_epochs=4, batch_size=44000, virtual_batch_size=44000) #check batch size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joblib.dump(study, 'study_tabnet_tuned_ros.pkl')\n",
+    "torch.save(tabnet_tuned_ros, 'TabNet_tuned_ros.pt')"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
