--- a/_2. Modeling/3. tuned_SMOTE-ENN_models.ipynb
+++ b/_2. Modeling/3. tuned_SMOTE-ENN_models.ipynb
@@ -19,7 +19,7 @@
     "import optuna\n",
     "from optuna import Trial, visualization\n",
     "from optuna.samplers import TPESampler\n",
-    "from imblearn.over_sampling import RandomOverSampler\n",
+    "from imblearn.combine import SMOTEENN\n",
     "from imblearn.pipeline import Pipeline\n",
     "\n",
     "random_state = 101\n",
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tuned Logistic Regression model on ROS data"
+    "## Tuned Logistic Regression model on SMOTE-ENN data"
    ]
   },
   {
@@ -124,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(direction='maximize', study_name='Logistic Regression Tuned ROS', sampler=TPESampler(seed=random_state))\n",
+    "study = optuna.create_study(direction='maximize', study_name='Logistic Regression Tuned SMOTE-ENN', sampler=TPESampler(seed=random_state))\n",
     "study.optimize(objective_lr, n_trials=20, show_progress_bar=True)"
    ]
   },
@@ -142,7 +142,7 @@
     }
    ],
    "source": [
-    "logreg_best_params = study.best_params #{'C': 0.012341115473953784, 'solver': 'saga', 'penalty': None}\n",
+    "logreg_best_params = study.best_params #\n",
     "print(logreg_best_params)"
    ]
   },
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./Images/Tuned models on ROS data/Logistic Regression/Optuna trial optimization history.png\">"
+    "<img src=\"./Images/Tuned models on SMOTE-ENN data/Logistic Regression/Optuna trial optimization history.png\">"
    ]
   },
   {
@@ -184,14 +184,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(tuned_lr_ros, 'logreg_tuned_ROS.joblib')"
+    "joblib.dump(study, 'study_logreg_tuned_SMOTE-ENN.pkl')\n",
+    "joblib.dump(tuned_lr_ros, 'logreg_tuned_SMOTE-ENN.joblib')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tuned XGBoost model on ROS data"
+    "## Tuned XGBoost model on SMOTE-ENN data"
    ]
   },
   {
@@ -232,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(direction='maximize', study_name='XGBoost Tuned ROS', sampler=TPESampler(seed=random_state))\n",
+    "study = optuna.create_study(direction='maximize', study_name='XGBoost Tuned SMOTE-ENN', sampler=TPESampler(seed=random_state))\n",
     "study.optimize(objective_xgboost, n_trials=20, show_progress_bar=True)"
    ]
   },
@@ -242,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xgboost_best_params = study.best_params #{'n_estimators': 200, 'learning_rate': 0.05, 'max_depth': 16, 'subsample': 0.8180174838276538, 'colsample_bytree': 0.8949014373055646, 'min_child_weight': 17}\n",
+    "xgboost_best_params = study.best_params #\n",
     "print(xgboost_best_params)"
    ]
   },
@@ -262,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./Images/Tuned models on ROS data/XGBoost/Optuna trial optimization history.png\">"
+    "<img src=\"./Images/Tuned models on SMOTE-ENN data/XGBoost/Optuna trial optimization history.png\">"
    ]
   },
   {
@@ -284,14 +285,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(tuned_xgb_ros, 'XGBoost_tuned_ROS.joblib')"
+    "joblib.dump(study, 'study_XGBoost_tuned_SMOTE-ENN.pkl')\n",
+    "joblib.dump(tuned_xgb_ros, 'XGBoost_tuned_SMOTE-ENN.joblib')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tuned Random Forests model on ROS data"
+    "## Tuned Random Forests model on SMOTE-ENN data"
    ]
   },
   {
@@ -328,7 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(direction='maximize', study_name='Random Forests Tuned ROS', sampler=TPESampler(seed=random_state))\n",
+    "study = optuna.create_study(direction='maximize', study_name='Random Forests Tuned SMOTE-ENN', sampler=TPESampler(seed=random_state))\n",
     "study.optimize(objective_lr, n_trials=20, show_progress_bar=True)"
    ]
   },
@@ -338,7 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf_best_params = study.best_params #{'max_depth': 20, 'min_samples_leaf': 8, 'min_samples_split': 4, 'n_estimators': 300}\n",
+    "rf_best_params = study.best_params #\n",
     "print(rf_best_params)"
    ]
   },
@@ -358,7 +360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./Images/Tuned models on ROS data/Random Forests/Optuna trial optimization history.png\">"
+    "<img src=\"./Images/Tuned models on SMOTE-ENN data/Random Forests/Optuna trial optimization history.png\">"
    ]
   },
   {
@@ -380,15 +382,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(study, 'study_rf_tuned_ros.pkl')\n",
-    "joblib.dump(tuned_xgb_ros, 'rf_tuned_ROS.joblib')"
+    "joblib.dump(study, 'study_rf_tuned_SMOTE-ENN.pkl')\n",
+    "joblib.dump(tuned_xgb_ros, 'rf_tuned_SMOTE-ENN.joblib')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tuned TabNet model on ROS data"
+    "## Tuned TabNet model on SMOTE-ENN data"
    ]
   },
   {
@@ -443,7 +445,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(direction=\"maximize\", study_name='TabNet Tuned ROS', sampler=TPESampler(seed=random_state))\n",
+    "study = optuna.create_study(direction=\"maximize\", study_name='TabNet Tuned SMOTE-ENN', sampler=TPESampler(seed=random_state))\n",
     "study.optimize(objective_tabnet, n_trials=20, show_progress_bar=True, gc_after_trial=True)"
    ]
   },
@@ -453,7 +455,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tabnet_best_params = study.best_params #{'n_d': 64, 'n_steps': 4, 'gamma': 1.23, 'n_shared': 4, 'lambda_sparse': 0.0001}\n",
+    "tabnet_best_params = study.best_params #\n",
     "print(tabnet_best_params)"
    ]
   },
@@ -473,7 +475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./Images/Tuned models on ROS data/TabNet/Optuna trial optimization history.png\">"
+    "<img src=\"./Images/Tuned models on SMOTE-ENN data/TabNet/Optuna trial optimization history.png\">"
    ]
   },
   {
@@ -495,8 +497,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(study, 'study_tabnet_tuned_ros.pkl')\n",
-    "torch.save(tabnet_tuned_ros, 'TabNet_tuned_ros.pt')"
+    "joblib.dump(study, 'study_tabnet_tuned_SMOTE-ENN.pkl')\n",
+    "torch.save(tabnet_tuned_ros, 'TabNet_tuned_SMOTE-ENN.pt')"
    ]
   }
  ],
