Update ROS and SMOTEENN

--- a/_2. Modeling/3. tuned_ROS_models.ipynb
+++ b/_2. Modeling/3. tuned_ROS_models.ipynb
@@ -105,7 +105,7 @@
     "    }\n",
     "\n",
     "    steps = [\n",
-    "        (\"ros\", RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)),\n",
+    "        (\"ros\", RandomOverSampler(random_state=random_state)),\n",
     "        (\"logreg\", LogisticRegression(**params, random_state=random_state, n_jobs=-1, verbose=2))\n",
     "    ]\n",
     "\n",
@@ -171,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ros = RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)\n",
+    "ros = RandomOverSampler(random_state=random_state)\n",
     "X_ros, y_ros = ros.fit_resample(X_train, y_train)\n",
     "\n",
     "tuned_lr_ros = LogisticRegression(**logreg_best_params, random_state=random_state, n_jobs=-1, verbose=2)\n",
@@ -213,7 +213,7 @@
     "    }\n",
     "\n",
     "    steps = [\n",
-    "        (\"ros\", RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)),\n",
+    "        (\"ros\", RandomOverSampler(random_state=random_state)),\n",
     "        (\"xgb\", xgb.XGBClassifier(**params, random_state=random_state, n_jobs=-1, verbosity=1, device=\"cuda\"))\n",
     "    ]\n",
     "\n",
@@ -271,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ros = RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)\n",
+    "ros = RandomOverSampler(random_state=random_state)\n",
     "X_ros, y_ros = ros.fit_resample(X_train, y_train)\n",
     "\n",
     "tuned_xgb_ros = xgb.XGBClassifier(**xgboost_best_params, random_state=random_state, n_jobs=-1, verbosity=2, device=\"cuda\")\n",
@@ -328,7 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(direction='maximize', study_name='Random Forests Tuned ROS', sampler=TPESampler(seed=random_state))\n",
+    "study = optuna.create_study(study_name='Random Forests Tuned ROS', sampler=TPESampler(seed=random_state))\n",
     "study.optimize(objective_lr, n_trials=20, show_progress_bar=True)"
    ]
   },
@@ -367,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ros = RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)\n",
+    "ros = RandomOverSampler(random_state=random_state)\n",
     "X_ros, y_ros = ros.fit_resample(X_train, y_train)\n",
     "\n",
     "tuned_rf_ros = RandomForestClassifier(**rf_best_params, random_state=random_state, verbose=1, n_jobs=-1)\n",
@@ -417,7 +417,7 @@
     "        X_train_fold, X_val_fold = X_train.iloc[train_index], X_train.iloc[val_index]\n",
     "        y_train_fold, y_val_fold = y_train[train_index], y_train[val_index]\n",
     "\n",
-    "        ros = RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)\n",
+    "        ros = RandomOverSampler(random_state=random_state)\n",
     "        X_ros, y_ros = ros.fit_resample(X_train_fold, y_train_fold)\n",
     "\n",
     "        model_tabnetClass.fit(X_train = X_ros.values,\n",
@@ -482,7 +482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ros = RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)\n",
+    "ros = RandomOverSampler(random_state=random_state)\n",
     "X_ros, y_ros = ros.fit_resample(X_train, y_train)\n",
     "\n",
     "tabnet_tuned_ros = TabNetClassifier(**tabnet_best_params, seed=random_state, verbose=2, optimizer_params=dict(lr=2e-2, weight_decay=1e-5), n_a=tabnet_best_params[\"n_d\"], device_name=\"cuda\")\n",
