--- a/_2. Modeling/3. tuned_SMOTE-ENN_models.ipynb
+++ b/_2. Modeling/3. tuned_SMOTE-ENN_models.ipynb
@@ -105,7 +105,7 @@
     "    }\n",
     "\n",
     "    steps = [\n",
-    "        (\"ros\", RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)),\n",
+    "        (\"smoteenn\", SMOTEENN(random_state=random_state, n_jobs=-1)),\n",
     "        (\"logreg\", LogisticRegression(**params, random_state=random_state, n_jobs=-1, verbose=2))\n",
     "    ]\n",
     "\n",
@@ -171,11 +171,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ros = RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)\n",
-    "X_ros, y_ros = ros.fit_resample(X_train, y_train)\n",
+    "smoteenn = SMOTEENN(random_state=random_state, n_jobs=-1)\n",
+    "X_smoteenn, y_smoteenn = smoteenn.fit_resample(X_train, y_train)\n",
     "\n",
     "tuned_lr_ros = LogisticRegression(**logreg_best_params, random_state=random_state, n_jobs=-1, verbose=2)\n",
-    "tuned_lr_ros.fit(X_ros, y_ros)"
+    "tuned_lr_ros.fit(X_smoteenn, y_smoteenn)"
    ]
   },
   {
@@ -214,7 +214,7 @@
     "    }\n",
     "\n",
     "    steps = [\n",
-    "        (\"ros\", RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)),\n",
+    "        (\"smoteenn\", SMOTEENN(random_state=random_state, n_jobs=-1)),\n",
     "        (\"xgb\", xgb.XGBClassifier(**params, random_state=random_state, n_jobs=-1, verbosity=1, device=\"cuda\"))\n",
     "    ]\n",
     "\n",
@@ -272,11 +272,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ros = RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)\n",
-    "X_ros, y_ros = ros.fit_resample(X_train, y_train)\n",
+    "smoteenn = SMOTEENN(random_state=random_state, n_jobs=-1)\n",
+    "X_smoteenn, y_smoteenn = smoteenn.fit_resample(X_train, y_train)\n",
     "\n",
     "tuned_xgb_ros = xgb.XGBClassifier(**xgboost_best_params, random_state=random_state, n_jobs=-1, verbosity=2, device=\"cuda\")\n",
-    "tuned_xgb_ros.fit(X_ros, y_ros)"
+    "tuned_xgb_ros.fit(X_smoteenn, y_smoteenn)"
    ]
   },
   {
@@ -311,7 +311,7 @@
     "    }\n",
     "\n",
     "    steps = [\n",
-    "        (\"ros\", RandomOverSampler(sampling_strategy='minority', random_state=random_state)),\n",
+    "        (\"smoteenn\", SMOTEENN(random_state=random_state, n_jobs=-1)),\n",
     "        (\"rf\", RandomForestClassifier(**params, random_state=random_state, verbose=1, n_jobs=-1))\n",
     "    ]\n",
     "\n",
@@ -369,11 +369,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ros = RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)\n",
-    "X_ros, y_ros = ros.fit_resample(X_train, y_train)\n",
+    "smoteenn = SMOTEENN(random_state=random_state, n_jobs=-1)\n",
+    "X_smoteenn, y_smoteenn = smoteenn.fit_resample(X_train, y_train)\n",
     "\n",
     "tuned_rf_ros = RandomForestClassifier(**rf_best_params, random_state=random_state, verbose=1, n_jobs=-1)\n",
-    "tuned_rf_ros.fit(X_ros, y_ros)"
+    "tuned_rf_ros.fit(X_smoteenn, y_smoteenn)"
    ]
   },
   {
@@ -419,11 +419,11 @@
     "        X_train_fold, X_val_fold = X_train.iloc[train_index], X_train.iloc[val_index]\n",
     "        y_train_fold, y_val_fold = y_train[train_index], y_train[val_index]\n",
     "\n",
-    "        ros = RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)\n",
-    "        X_ros, y_ros = ros.fit_resample(X_train_fold, y_train_fold)\n",
+    "        smoteenn = SMOTEENN(random_state=random_state, n_jobs=-1)\n",
+    "        X_smoteenn, y_smoteenn = smoteenn.fit_resample(X_train_fold, y_train_fold)\n",
     "\n",
-    "        model_tabnetClass.fit(X_train = X_ros.values,\n",
-    "                              y_train = y_ros,\n",
+    "        model_tabnetClass.fit(X_train = X_smoteenn.values,\n",
+    "                              y_train = y_smoteenn,\n",
     "                              eval_set = [(X_val_fold.values, y_val_fold)],\n",
     "                              patience=2,\n",
     "                              max_epochs=4,\n",
@@ -484,11 +484,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ros = RandomOverSampler(sampling_strategy=\"minority\", random_state=random_state)\n",
-    "X_ros, y_ros = ros.fit_resample(X_train, y_train)\n",
+    "smoteenn = SMOTEENN(random_state=random_state, n_jobs=-1)\n",
+    "X_smoteenn, y_smoteenn = smoteenn.fit_resample(X_train, y_train)\n",
     "\n",
     "tabnet_tuned_ros = TabNetClassifier(**tabnet_best_params, seed=random_state, verbose=2, optimizer_params=dict(lr=2e-2, weight_decay=1e-5), n_a=tabnet_best_params[\"n_d\"], device_name=\"cuda\")\n",
-    "tabnet_tuned_ros.fit(X_ros.values, y_ros, max_epochs=4, batch_size=44000, virtual_batch_size=44000) #check batch size"
+    "tabnet_tuned_ros.fit(X_smoteenn.values, y_smoteenn, max_epochs=4, batch_size=44000, virtual_batch_size=44000) #check batch size"
    ]
   },
   {
