Added RUS methods and models

--- a/_2. Modeling/2. tuned_imbalanced_models.ipynb
+++ b/_2. Modeling/2. tuned_imbalanced_models.ipynb
@@ -326,7 +326,7 @@
    "outputs": [],
    "source": [
     "study = optuna.create_study(direction='maximize', study_name='Random Forests Tuned Imbalanced', sampler=TPESampler(seed=random_state))\n",
-    "study.optimize(objective_xgboost, n_trials=20, show_progress_bar=True)"
+    "study.optimize(objective_rf, n_trials=20, show_progress_bar=True)"
    ]
   },
   {
