--- a/_2. Modeling/3. tuned_RUS_models.ipynb
+++ b/_2. Modeling/3. tuned_RUS_models.ipynb
@@ -19,7 +19,7 @@
     "import optuna\n",
     "from optuna import Trial, visualization\n",
     "from optuna.samplers import TPESampler\n",
-    "from imblearn.over_sampling import RandomOverSampler\n",
+    "from imblearn.under_sampling import RandomUnderSampler\n",
     "from imblearn.pipeline import Pipeline\n",
     "\n",
     "random_state = 101\n",
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tuned Logistic Regression model on ROS data"
+    "## Tuned Logistic Regression model on RUS data"
    ]
   },
   {
@@ -105,7 +105,7 @@
     "    }\n",
     "\n",
     "    steps = [\n",
-    "        (\"ros\", RandomOverSampler(random_state=random_state)),\n",
+    "        (\"rus\", RandomUnderSampler(random_state=random_state)),\n",
     "        (\"logreg\", LogisticRegression(**params, random_state=random_state, n_jobs=-1, verbose=2))\n",
     "    ]\n",
     "\n",
@@ -124,25 +124,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(direction='maximize', study_name='Logistic Regression Tuned ROS', sampler=TPESampler(seed=random_state))\n",
+    "study = optuna.create_study(direction='maximize', study_name='Logistic Regression Tuned RUS', sampler=TPESampler(seed=random_state))\n",
     "study.optimize(objective_lr, n_trials=20, show_progress_bar=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'C': 0.012341115473953784, 'solver': 'saga', 'penalty': None}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "logreg_best_params = study.best_params #{'C': 0.012341115473953784, 'solver': 'saga', 'penalty': None}\n",
+    "logreg_best_params = study.best_params #\n",
     "print(logreg_best_params)"
    ]
   },
@@ -171,11 +163,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ros = RandomOverSampler(random_state=random_state)\n",
-    "X_ros, y_ros = ros.fit_resample(X_train, y_train)\n",
+    "rus = RandomUnderSampler(random_state=random_state)\n",
+    "X_rus, y_rus = rus.fit_resample(X_train, y_train)\n",
     "\n",
-    "tuned_lr_ros = LogisticRegression(**logreg_best_params, random_state=random_state, n_jobs=-1, verbose=2)\n",
-    "tuned_lr_ros.fit(X_ros, y_ros)"
+    "tuned_lr_rus = LogisticRegression(**logreg_best_params, random_state=random_state, n_jobs=-1, verbose=2)\n",
+    "tuned_lr_rus.fit(X_rus, y_rus)"
    ]
   },
   {
@@ -184,14 +176,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(tuned_lr_ros, 'logreg_tuned_ROS.joblib')"
+    "joblib.dump(study, 'study_lr_tuned_rus.pkl')\n",
+    "joblib.dump(tuned_lr_rus, 'logreg_tuned_RUS.joblib')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tuned XGBoost model on ROS data"
+    "## Tuned XGBoost model on RUS data"
    ]
   },
   {
@@ -213,7 +206,7 @@
     "    }\n",
     "\n",
     "    steps = [\n",
-    "        (\"ros\", RandomOverSampler(random_state=random_state)),\n",
+    "        (\"rus\", RandomUnderSampler(random_state=random_state)),\n",
     "        (\"xgb\", xgb.XGBClassifier(**params, random_state=random_state, n_jobs=-1, verbosity=1, device=\"cuda\"))\n",
     "    ]\n",
     "\n",
@@ -232,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(direction='maximize', study_name='XGBoost Tuned ROS', sampler=TPESampler(seed=random_state))\n",
+    "study = optuna.create_study(direction='maximize', study_name='XGBoost Tuned RUS', sampler=TPESampler(seed=random_state))\n",
     "study.optimize(objective_xgboost, n_trials=20, show_progress_bar=True)"
    ]
   },
@@ -242,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xgboost_best_params = study.best_params #{'n_estimators': 200, 'learning_rate': 0.05, 'max_depth': 16, 'subsample': 0.8180174838276538, 'colsample_bytree': 0.8949014373055646, 'min_child_weight': 17}\n",
+    "xgboost_best_params = study.best_params #\n",
     "print(xgboost_best_params)"
    ]
   },
@@ -271,11 +264,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ros = RandomOverSampler(random_state=random_state)\n",
-    "X_ros, y_ros = ros.fit_resample(X_train, y_train)\n",
+    "rus = RandomUnderSampler(random_state=random_state)\n",
+    "X_rus, y_rus = rus.fit_resample(X_train, y_train)\n",
     "\n",
-    "tuned_xgb_ros = xgb.XGBClassifier(**xgboost_best_params, random_state=random_state, n_jobs=-1, verbosity=2, device=\"cuda\")\n",
-    "tuned_xgb_ros.fit(X_ros, y_ros)"
+    "tuned_xgb_rus = xgb.XGBClassifier(**xgboost_best_params, random_state=random_state, n_jobs=-1, verbosity=2, device=\"cuda\")\n",
+    "tuned_xgb_rus.fit(X_rus, y_rus)"
    ]
   },
   {
@@ -284,16 +277,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rosrus_pipeline = Pipeline(\n",
-    "    [\n",
-    "        (\"ros\", RandomOverSampler(random_state=random_state)),\n",
-    "        (\"rus\", RandomUnderSampler(random_state=random_state))\n",
-    "    ]\n",
-    ")\n",
+    "# rosrus_pipeline = Pipeline(\n",
+    "#     [\n",
+    "#         (\"ros\", RandomOverSampler(random_state=random_state)),\n",
+    "#         (\"rus\", RandomUnderSampler(random_state=random_state))\n",
+    "#     ]\n",
+    "# )\n",
     "\n",
-    "X_rosrus, y_rosrus = rosrus_pipeline.fit_resample(X_train, y_train)\n",
-    "tuned_xgb_ros = xgb.XGBClassifier(**xgboost_best_params, random_state=random_state, n_jobs=-1, verbosity=2, device=\"cuda\")\n",
-    "tuned_xgb_ros.fit(X_rosrus, y_rosrus)"
+    "# X_rosrus, y_rosrus = rosrus_pipeline.fit_resample(X_train, y_train)\n",
+    "# tuned_xgb_ros = xgb.XGBClassifier(**xgboost_best_params, random_state=random_state, n_jobs=-1, verbosity=2, device=\"cuda\")\n",
+    "# tuned_xgb_ros.fit(X_rosrus, y_rosrus)"
    ]
   },
   {
@@ -302,7 +295,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(tuned_xgb_ros, 'XGBoost_tuned_ROS.joblib')"
+    "joblib.dump(study, 'study_xgb_tuned_rus.pkl')\n",
+    "joblib.dump(tuned_xgb_rus, 'XGBoost_tuned_RUS.joblib')"
    ]
   },
   {
@@ -327,7 +321,7 @@
     "    }\n",
     "\n",
     "    steps = [\n",
-    "        (\"ros\", RandomOverSampler(sampling_strategy='minority', random_state=random_state)),\n",
+    "        (\"rus\", RandomUnderSampler(sampling_strategy='minority', random_state=random_state)),\n",
     "        (\"rf\", RandomForestClassifier(**params, random_state=random_state, verbose=1, n_jobs=-1))\n",
     "    ]\n",
     "\n",
@@ -346,7 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(study_name='Random Forests Tuned ROS', sampler=TPESampler(seed=random_state))\n",
+    "study = optuna.create_study(study_name='Random Forests Tuned RUS', sampler=TPESampler(seed=random_state))\n",
     "study.optimize(objective_rf, n_trials=20, show_progress_bar=True)"
    ]
   },
@@ -356,7 +350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf_best_params = study.best_params #{'max_depth': 20, 'min_samples_leaf': 8, 'min_samples_split': 4, 'n_estimators': 300}\n",
+    "rf_best_params = study.best_params #\n",
     "print(rf_best_params)"
    ]
   },
@@ -385,11 +379,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ros = RandomOverSampler(random_state=random_state)\n",
-    "X_ros, y_ros = ros.fit_resample(X_train, y_train)\n",
+    "rus = RandomUnderSampler(random_state=random_state)\n",
+    "X_rus, y_rus = rus.fit_resample(X_train, y_train)\n",
     "\n",
-    "tuned_rf_ros = RandomForestClassifier(**rf_best_params, random_state=random_state, verbose=1, n_jobs=-1)\n",
-    "tuned_rf_ros.fit(X_ros, y_ros)"
+    "tuned_rf_rus = RandomForestClassifier(**rf_best_params, random_state=random_state, verbose=1, n_jobs=-1)\n",
+    "tuned_rf_rus.fit(X_rus, y_rus)"
    ]
   },
   {
@@ -398,8 +392,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(study, 'study_rf_tuned_ros.pkl')\n",
-    "joblib.dump(tuned_rf_ros, 'rf_tuned_ROS.joblib')"
+    "joblib.dump(study, 'study_rf_tuned_rus.pkl')\n",
+    "joblib.dump(tuned_rf_rus, 'rf_tuned_RUS.joblib')"
    ]
   },
   {
@@ -435,11 +429,11 @@
     "        X_train_fold, X_val_fold = X_train.iloc[train_index], X_train.iloc[val_index]\n",
     "        y_train_fold, y_val_fold = y_train[train_index], y_train[val_index]\n",
     "\n",
-    "        ros = RandomOverSampler(random_state=random_state)\n",
-    "        X_ros, y_ros = ros.fit_resample(X_train_fold, y_train_fold)\n",
+    "        rus = RandomUnderSampler(random_state=random_state)\n",
+    "        X_rus, y_rus = rus.fit_resample(X_train_fold, y_train_fold)\n",
     "\n",
-    "        model_tabnetClass.fit(X_train = X_ros.values,\n",
-    "                              y_train = y_ros,\n",
+    "        model_tabnetClass.fit(X_train = X_rus.values,\n",
+    "                              y_train = y_rus,\n",
     "                              eval_set = [(X_val_fold.values, y_val_fold)],\n",
     "                              patience=2,\n",
     "                              max_epochs=4,\n",
@@ -461,7 +455,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(direction=\"maximize\", study_name='TabNet Tuned ROS', sampler=TPESampler(seed=random_state))\n",
+    "study = optuna.create_study(direction=\"maximize\", study_name='TabNet Tuned RUS', sampler=TPESampler(seed=random_state))\n",
     "study.optimize(objective_tabnet, n_trials=20, show_progress_bar=True, gc_after_trial=True)"
    ]
   },
@@ -471,7 +465,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tabnet_best_params = study.best_params #{'n_d': 64, 'n_steps': 4, 'gamma': 1.23, 'n_shared': 4, 'lambda_sparse': 0.0001}\n",
+    "tabnet_best_params = study.best_params #\n",
     "print(tabnet_best_params)"
    ]
   },
@@ -500,11 +494,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ros = RandomOverSampler(random_state=random_state)\n",
-    "X_ros, y_ros = ros.fit_resample(X_train, y_train)\n",
+    "rus = RandomUnderSampler(random_state=random_state)\n",
+    "X_rus, y_rus = rus.fit_resample(X_train, y_train)\n",
     "\n",
-    "tabnet_tuned_ros = TabNetClassifier(**tabnet_best_params, seed=random_state, verbose=2, optimizer_params=dict(lr=2e-2, weight_decay=1e-5), n_a=tabnet_best_params[\"n_d\"], device_name=\"cuda\")\n",
-    "tabnet_tuned_ros.fit(X_ros.values, y_ros, max_epochs=4, batch_size=44000, virtual_batch_size=44000) #check batch size"
+    "tabnet_tuned_rus = TabNetClassifier(**tabnet_best_params, seed=random_state, verbose=2, optimizer_params=dict(lr=2e-2, weight_decay=1e-5), n_a=tabnet_best_params[\"n_d\"], device_name=\"cuda\")\n",
+    "tabnet_tuned_rus.fit(X_rus.values, y_rus, max_epochs=4, batch_size=44000, virtual_batch_size=44000) #check batch size"
    ]
   },
   {
@@ -513,8 +507,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(study, 'study_tabnet_tuned_ros.pkl')\n",
-    "torch.save(tabnet_tuned_ros, 'TabNet_tuned_ros.pt')"
+    "joblib.dump(study, 'study_tabnet_tuned_rus.pkl')\n",
+    "torch.save(tabnet_tuned_rus, 'TabNet_tuned_RUS.pt')"
    ]
   }
  ],
