--- a/_2. Modeling/3. tuned_SMOTE-ENN_models.ipynb
+++ b/_2. Modeling/3. tuned_SMOTE-ENN_models.ipynb
@@ -109,11 +109,11 @@
     "        (\"logreg\", LogisticRegression(**params, random_state=random_state, n_jobs=-1, verbose=2))\n",
     "    ]\n",
     "\n",
-    "    xgb_pipeline = Pipeline(steps=steps)\n",
+    "    lr_pipeline = Pipeline(steps=steps)\n",
     "\n",
     "    skfold = StratifiedKFold(n_splits=3, random_state=random_state, shuffle=True)\n",
     "\n",
-    "    scores = cross_val_score(xgb_pipeline, X_train, y_train, scoring=\"roc_auc\", n_jobs=-1, cv=skfold)\n",
+    "    scores = cross_val_score(lr_pipeline, X_train, y_train, scoring=\"roc_auc\", n_jobs=-1, cv=skfold)\n",
     "\n",
     "    return np.mean(scores)"
    ]
@@ -174,8 +174,8 @@
     "smoteenn = SMOTEENN(random_state=random_state, n_jobs=-1)\n",
     "X_smoteenn, y_smoteenn = smoteenn.fit_resample(X_train, y_train)\n",
     "\n",
-    "tuned_lr_ros = LogisticRegression(**logreg_best_params, random_state=random_state, n_jobs=-1, verbose=2)\n",
-    "tuned_lr_ros.fit(X_smoteenn, y_smoteenn)"
+    "tuned_lr_smoteenn = LogisticRegression(**logreg_best_params, random_state=random_state, n_jobs=-1, verbose=2)\n",
+    "tuned_lr_smoteenn.fit(X_smoteenn, y_smoteenn)"
    ]
   },
   {
@@ -185,7 +185,7 @@
    "outputs": [],
    "source": [
     "joblib.dump(study, 'study_logreg_tuned_SMOTE-ENN.pkl')\n",
-    "joblib.dump(tuned_lr_ros, 'logreg_tuned_SMOTE-ENN.joblib')"
+    "joblib.dump(tuned_lr_smoteenn, 'logreg_tuned_SMOTE-ENN.joblib')"
    ]
   },
   {
@@ -272,11 +272,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "smoteenn = SMOTEENN(random_state=random_state, n_jobs=-1)\n",
+    "smoteenn = SMOTEENN(random_state=random_state)\n",
     "X_smoteenn, y_smoteenn = smoteenn.fit_resample(X_train, y_train)\n",
     "\n",
-    "tuned_xgb_ros = xgb.XGBClassifier(**xgboost_best_params, random_state=random_state, n_jobs=-1, verbosity=2, device=\"cuda\")\n",
-    "tuned_xgb_ros.fit(X_smoteenn, y_smoteenn)"
+    "tuned_xgb_smoteenn = xgb.XGBClassifier(**xgboost_best_params, random_state=random_state, n_jobs=-1, verbosity=2, device=\"cuda\")\n",
+    "tuned_xgb_smoteenn.fit(X_smoteenn, y_smoteenn)"
    ]
   },
   {
@@ -286,7 +286,7 @@
    "outputs": [],
    "source": [
     "joblib.dump(study, 'study_XGBoost_tuned_SMOTE-ENN.pkl')\n",
-    "joblib.dump(tuned_xgb_ros, 'XGBoost_tuned_SMOTE-ENN.joblib')"
+    "joblib.dump(tuned_xgb_smoteenn, 'XGBoost_tuned_SMOTE-ENN.joblib')"
    ]
   },
   {
@@ -331,7 +331,7 @@
    "outputs": [],
    "source": [
     "study = optuna.create_study(direction='maximize', study_name='Random Forests Tuned SMOTE-ENN', sampler=TPESampler(seed=random_state))\n",
-    "study.optimize(objective_lr, n_trials=20, show_progress_bar=True)"
+    "study.optimize(objective_rf, n_trials=20, show_progress_bar=True)"
    ]
   },
   {
@@ -372,8 +372,8 @@
     "smoteenn = SMOTEENN(random_state=random_state, n_jobs=-1)\n",
     "X_smoteenn, y_smoteenn = smoteenn.fit_resample(X_train, y_train)\n",
     "\n",
-    "tuned_rf_ros = RandomForestClassifier(**rf_best_params, random_state=random_state, verbose=1, n_jobs=-1)\n",
-    "tuned_rf_ros.fit(X_smoteenn, y_smoteenn)"
+    "tuned_rf_smoteenn = RandomForestClassifier(**rf_best_params, random_state=random_state, verbose=1, n_jobs=-1)\n",
+    "tuned_rf_smoteenn.fit(X_smoteenn, y_smoteenn)"
    ]
   },
   {
@@ -383,7 +383,7 @@
    "outputs": [],
    "source": [
     "joblib.dump(study, 'study_rf_tuned_SMOTE-ENN.pkl')\n",
-    "joblib.dump(tuned_xgb_ros, 'rf_tuned_SMOTE-ENN.joblib')"
+    "joblib.dump(tuned_rf_smoteenn, 'rf_tuned_SMOTE-ENN.joblib')"
    ]
   },
   {
@@ -487,8 +487,8 @@
     "smoteenn = SMOTEENN(random_state=random_state, n_jobs=-1)\n",
     "X_smoteenn, y_smoteenn = smoteenn.fit_resample(X_train, y_train)\n",
     "\n",
-    "tabnet_tuned_ros = TabNetClassifier(**tabnet_best_params, seed=random_state, verbose=2, optimizer_params=dict(lr=2e-2, weight_decay=1e-5), n_a=tabnet_best_params[\"n_d\"], device_name=\"cuda\")\n",
-    "tabnet_tuned_ros.fit(X_smoteenn.values, y_smoteenn, max_epochs=4, batch_size=44000, virtual_batch_size=44000) #check batch size"
+    "tabnet_tuned_smoteenn = TabNetClassifier(**tabnet_best_params, seed=random_state, verbose=2, optimizer_params=dict(lr=2e-2, weight_decay=1e-5), n_a=tabnet_best_params[\"n_d\"], device_name=\"cuda\")\n",
+    "tabnet_tuned_smoteenn.fit(X_smoteenn.values, y_smoteenn, max_epochs=4, batch_size=44000, virtual_batch_size=44000) #check batch size"
    ]
   },
   {
@@ -498,7 +498,7 @@
    "outputs": [],
    "source": [
     "joblib.dump(study, 'study_tabnet_tuned_SMOTE-ENN.pkl')\n",
-    "torch.save(tabnet_tuned_ros, 'TabNet_tuned_SMOTE-ENN.pt')"
+    "torch.save(tabnet_tuned_smoteenn, 'TabNet_tuned_SMOTE-ENN.pt')"
    ]
   }
  ],
