--- a/_1. Data Preprocessing/3. Splitting and encoding.ipynb
+++ b/_1. Data Preprocessing/3. Splitting and encoding.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "1228595     -72.6833   26.0726   -80.1527                  0         16  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
     "X = ontime_reporting.loc[:, ontime_reporting.columns != \"DEP_DEL15\"]\n",
     "y = ontime_reporting[\"DEP_DEL15\"]\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=random_state, shuffle=True)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=random_state, shuffle=True, stratify=y)\n",
     "\n",
     "print(X_train.shape)\n",
     "print(y_train.shape)\n",
